[tool.poetry]
name = "libgolf"
version = "0.0.1"
description = "Common utilities for implementing golfing language builtin libraries"
authors = ["pxeger <_@pxeger.com>"]
license = "Artistic License 2.0"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
