[tool.poetry]
name = "libgolf"
version = "0.0.1-2"
description = "Common utilities for implementing golfing language builtin libraries"
authors = ["pxeger <_@pxeger.com>"]
license = "Artistic License 2.0"
repository = "https://github.com/pxeger/libgolf"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
